Format the elevation values in contextualdata partial

--- a/contribs/gmf/examples/partials/contextualdata.html
+++ b/contribs/gmf/examples/partials/contextualdata.html
@@ -20,7 +20,7 @@
       Elevation (SRTM)
     </td>
     <td>
-      {{srtm}} [m]
+      {{srtm | number}} [m]
     </td>
   </tr>
   <tr>
@@ -28,7 +28,7 @@
       Elevation (Aster)
     </td>
     <td>
-      {{aster}} [m]
+      {{aster | number}} [m]
     </td>
   </tr>
   <tr>
