Set html and body position to fixed
To workaround an iOS bug, see #2695

--- a/contribs/gmf/less/base.less
+++ b/contribs/gmf/less/base.less
@@ -9,7 +9,11 @@
 @import 'vars.less';
 
 html, body {
+  // fixed position is a workaround for the iOS landscape issue when the page top
+  // is hidden behind the address bar.
+  position: fixed;
   height: 100%;
+  width: 100%;
 }
 
 body {
